--- a/TP1/Exercice4/index.html
+++ b/TP1/Exercice4/index.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<title>Exercice 4 Javascript</title>
 	</head>
 	<body>
 
