--- a/TP1/Exercice3/index.html
+++ b/TP1/Exercice3/index.html
@@ -7,6 +7,8 @@
 	<body>
 		<img src="./img.jpg" alt="unknown" id="img">
 		<button id="btn" type="button" name="button">No click Me !</button>
+
+		<button id="btn1" type="button" name="button">Change color</button>
 	</body>
 	<script type="text/javascript" src="./script.js"></script>
 </html>
