--- a/TP1/Exercice3/index.html
+++ b/TP1/Exercice3/index.html
@@ -5,7 +5,7 @@
 		<title>Exercice 3 Javascript</title>
 	</head>
 	<body>
-		<img src="./img.jpg" alt="unknown" id="img">
+		<img src="./chat.jpg" alt="chat" name="chat" id="img">
 		<button id="btn" type="button" name="button">No click Me !</button>
 
 		<button id="btn1" type="button" name="button">Change color</button>
