--- a/TP1/Exercice5/index.html
+++ b/TP1/Exercice5/index.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Exercice 3 Javascript</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<title>Exercice 5 Javascript</title>
 	</head>
 	<body>
 	</body>
