updated with sound

--- a/TP1/Exercice5/index.html
+++ b/TP1/Exercice5/index.html
@@ -6,6 +6,10 @@
 		<title>Exercice 5 Javascript</title>
 	</head>
 	<body>
+		<audio id="myAudio">
+			<source src="ah.mp3" type="audio/mp3">
+			Your browser does not support the audio element.
+</audio>
 	</body>
 	<script type="text/javascript" src="./script.js"></script>
 </html>
