--- a/TP1/Exercice5/index.html
+++ b/TP1/Exercice5/index.html
@@ -6,7 +6,7 @@
 		<title>Exercice 5 Javascript</title>
 	</head>
 	<body>
-		<audio id="myAudio">
+		<audio id="ah">
 			<source src="ah.mp3" type="audio/mp3">
 			Your browser does not support the audio element.
 </audio>
