Added perfect grid and reset button

--- a/TP1/Exercice5/index.html
+++ b/TP1/Exercice5/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<!doctype html>
+<html lang="en">
 <html>
 	<head>
 		<meta charset="utf-8">
@@ -9,12 +10,18 @@
 	</head>
 	<body>
 		<audio id="ah">
-			<source src="ah.mp3" type="audio/mp3">
+			<source src="Audio/ah.mp3" type="audio/mp3">
 			Your browser does not support the audio element.
 		</audio>
+		<audio id="fin">
+			<source src="Audio/fin.mp3" type="audio/mp3">
+		</audio>
+
 		<div class="container">
-			
+
+
 		</div>
+		<button id="btn" type="button" name="button">No click Me !</button>
 
 	</body>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
